--- a/EBookMasterWebSpa/src/app/components/borrowing-page/borrowing-page.component.html
+++ b/EBookMasterWebSpa/src/app/components/borrowing-page/borrowing-page.component.html
@@ -1,1 +1,25 @@
-<p>borrowing-page works!</p>
+<div class="borrowing-list">
+  <h2>Historia wypożyczeń</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Tytuł</th>
+        <th>Autor</th>
+        <th>Seria</th>
+        <th>Kategoria</th>
+        <th>Rok wydania</th>
+        <th>Wydawnictwo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let borrowing of borrowings">
+        <td>{{ borrowing.book.title }}</td>
+        <td>{{ getAuthors(borrowing.book.authors) }}</td>
+        <td>{{ borrowing.book.series?.name ?? '' }}</td>
+        <td>{{ getCategories(borrowing.book.categories) }}</td>
+        <td>{{ borrowing.book.publicationYear | date: 'dd-MM-yyyy' }}</td>
+        <td>{{ borrowing.book.publishingHouse.name }} ({{ borrowing.book.publishingHouse.country }})</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
