--- a/EBookMasterWebSpa/src/app/components/book-page/book-page.component.scss
+++ b/EBookMasterWebSpa/src/app/components/book-page/book-page.component.scss
@@ -1,6 +1,6 @@
 @import '../../../config.scss';
 
-.borrowing-list {
+.book-list {
   margin: 1rem;
   padding: 1rem;
   background-color: #f9f9f9;
@@ -39,6 +39,39 @@
 
     tr:hover {
       background-color: #f1f1f1;
+    }
+  }
+}
+
+.btn-borrow {
+  color: white;
+  padding: .8rem 1.2rem;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.2s;
+  background-color: $primary-color;
+
+  &:hover {
+    background-color: $primary-darker-color;
+    transform: translateY(-2px);
+  }
+
+  &.return {
+    background-color: $orange-color;
+
+    &:hover {
+      background-color: $orange-darker-color;
+    }
+  }
+
+  &[disabled] {
+    opacity: 0.5;
+    cursor: not-allowed;
+
+    &:hover {
+      transform: none;
     }
   }
 }
