--- a/EBookMasterWebSpa/src/config.scss
+++ b/EBookMasterWebSpa/src/config.scss
@@ -1,6 +1,6 @@
 $primary-color: #0075f3;
 $primary-darker-color: darken(#0075f3, 10%);
-$orange-color: #ffae22;
+$orange-color: #ffa811;
 $orange-darker-color: darken(#ffae22, 10%);
 $red-color: #dc3545;
 $red-darker-color: darken(#dc3545, 10%);
