--- a/EBookMasterWebSpa/src/app/components/book-page/book-page.component.scss
+++ b/EBookMasterWebSpa/src/app/components/book-page/book-page.component.scss
@@ -31,6 +31,12 @@
     td {
       font-size: 1rem;
       color: #555;
+
+      p.premium {
+        padding: 1rem;
+        border-radius: $border-radius;
+        border: 1px #555 solid;
+      }
     }
 
     tr:last-child td {
