--- a/EBookMasterWebSpa/src/app/components/book-page/book-page.component.scss
+++ b/EBookMasterWebSpa/src/app/components/book-page/book-page.component.scss
@@ -36,6 +36,7 @@
         padding: 1rem;
         border-radius: $border-radius;
         border: 1px #555 solid;
+        text-align: center;
       }
     }
 
