--- a/EBookMasterWebSpa/src/app/app.component.scss
+++ b/EBookMasterWebSpa/src/app/app.component.scss
@@ -28,50 +28,70 @@ nav {
   }
 }
 
-.message {
-  margin: 1rem;
-  padding: 20px;
-  color: $success-color;
-  background-color: $success-background-color;
-  border: 1px solid $success-border-color;
-  border-radius: 5px;
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  animation: fadeIn 0.2s ease, fadeOut 0.2s ease 4.8s forwards;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 9999;
+
+  .spinner {
+    width: 8rem;
+    height: 8rem;
+    border: 0.5rem solid transparent;
+    border-top: 0.5rem solid $primary-color;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.message {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  width: 50vw;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: $border-radius;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 9999;
+  color: white;
+  padding: 1rem;
+  animation: show-message 2s ease-in-out infinite;
 
   &.error {
-    color: $red-color;
-    background-color: lighten($red-color, 35%);
-    border: 1px solid $red-darker-color;
+    background-color: rgba(darken($red-darker-color, 10%), 0.8);
   }
 
-  &.loading {
-    color: $orange-darker-color;
-    background-color: lighten($orange-color, 35%);
-    border: 1px solid $orange-darker-color;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  to {
-    opacity: 0;
-    transform: translateY(-10px);
+  @keyframes show-message {
+    0% {
+      opacity: 0;
+    }
+    10% {
+      opacity: 1;
+    }
+    90% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
   }
 }
