--- a/EBookMasterWebSpa/src/app/components/book-page/book-page.component.scss
+++ b/EBookMasterWebSpa/src/app/components/book-page/book-page.component.scss
@@ -13,39 +13,25 @@
     color: #333;
   }
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
+  input {
+    width: 20%;
+    padding: 0.5rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: $border-radius;
+    transition: border-color 0.2s;
 
-    th, td {
-      padding: 0.5rem;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
+    &:focus {
+      border-color: #000;
+      outline: none;
     }
+  }
 
-    th {
-      font-size: 1.2rem;
-    }
-
-    td {
-      font-size: 1rem;
-      color: #555;
-
-      p.premium {
-        padding: 1rem;
-        border-radius: $border-radius;
-        border: 1px #555 solid;
-        text-align: center;
-      }
-    }
-
-    tr:last-child td {
-      border-bottom: none;
-    }
-
-    tr:hover {
-      background-color: #f1f1f1;
-    }
+  p.premium {
+    padding: 0.8rem;
+    margin: 0;
+    border-radius: $border-radius;
+    border: 1px #555 solid;
+    text-align: center;
   }
 }
