--- a/EBookMasterWebSpa/src/app/components/info-dialog/info-dialog.component.html
+++ b/EBookMasterWebSpa/src/app/components/info-dialog/info-dialog.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="info-field">
       <label>Data zwrotu:</label>
-      <span>{{ borrowing.returnDate ? (borrowing.returnDate | date: 'dd-MM-yyyy HH:mm') : 'Not Returned Yet' }}</span>
+      <span>{{ borrowing.returnDate ? (borrowing.returnDate | date: 'dd-MM-yyyy HH:mm') : 'Jeszcze nie zwrócona' }}</span>
     </div>
     <div class="info-field">
       <label>Tytuł:</label>
