--- a/EBookMasterWebSpa/src/app/components/book-page/book-page.component.html
+++ b/EBookMasterWebSpa/src/app/components/book-page/book-page.component.html
@@ -16,6 +16,7 @@
         <th>Wydawnictwo</th>
         <th></th>
         <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -28,6 +29,7 @@
         <td>{{ book.publishingHouse.name }} ({{ book.publishingHouse.country }})</td>
         <td><p [class.premium]="book.isPremium">{{ book.isPremium ? 'Premium' : '' }}</p></td>
         <td><button class="btn-borrow" [class.return]="book.borrowed" [disabled]="book.notAllowed || (book.isPremium && !userIsPremium)" (click)="toggleBorrow(book)">{{ book.borrowed ? 'Zwróć' : 'Wypożycz' }}</button></td>
+        <td><button class="btn-info" (click)="openDialog(book)">Wypożyczenia</button></td>
       </tr>
     </tbody>
   </table>
